@startuml

title __CLI's Class Diagram__\n

  namespace client.cli {
    class client.cli.LaunchCli {
    }
  }
  

  namespace client.cli {
    namespace controller {
      class client.cli.controller.CliController {
      }
    }
  }
  

  namespace client.cli {
    namespace view {
      class client.cli.view.CliInputReader {
      }
    }
  }
  

  namespace client.cli {
    namespace view {
      class client.cli.view.CliView {
      }
    }
  }
  

  namespace client.cli {
    namespace view {
      interface client.cli.view.CommandParser {
      }
    }
  }
  

  client.cli.controller.CliController o-- common.remote_interfaces.RemotePlayer : player
  client.cli.controller.CliController o-- client.view.AbstractView : view
  client.cli.controller.CliController o-- common.remote_interfaces.RemoteLoginController : loginController
  client.cli.view.CliInputReader .up.|> client.view.InputReader
  client.cli.view.CliView -up-|> client.view.AbstractView
  client.cli.view.CliView o-- client.view.InputReader : inputReader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
